--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.katkov.lolachievements"
         minSdkVersion 15
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -24,27 +24,27 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:design:27.1.1'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'com.google.android.material:material:1.1.0-alpha02'
 
     // BUTTER KNIFE
-    implementation "com.jakewharton:butterknife:8.8.1"
-    annotationProcessor "com.jakewharton:butterknife-compiler:8.8.1"
+    implementation "com.jakewharton:butterknife:10.0.0"
+    annotationProcessor "com.jakewharton:butterknife-compiler:10.0.0"
 
     // MVP - MOXY
-    implementation "com.arello-mobile:moxy:1.5.3"
-    implementation "com.arello-mobile:moxy-android:1.5.3"
-    implementation "com.arello-mobile:moxy-app-compat:1.5.3"
-    annotationProcessor "com.arello-mobile:moxy-compiler:1.5.3"
+    implementation "com.arello-mobile:moxy:1.5.5"
+    implementation "com.arello-mobile:moxy-android:1.5.5"
+    implementation "com.arello-mobile:moxy-app-compat:1.5.5"
+    annotationProcessor "com.arello-mobile:moxy-compiler:1.5.5"
 
     // ORM - ROOM
-    implementation "android.arch.persistence.room:runtime:1.1.1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-    implementation "android.arch.persistence.room:rxjava2:1.1.1"
+    implementation 'androidx.room:room-runtime:2.1.0-alpha04'
+    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha04'
+    implementation 'androidx.room:room-rxjava2:2.1.0-alpha04'
 
     // DI - TOOTHPICK
     implementation "com.github.stephanenicolas.toothpick:toothpick-runtime:1.1.3"
@@ -52,32 +52,27 @@ dependencies {
     annotationProcessor "com.github.stephanenicolas.toothpick:toothpick-compiler:1.1.3"
 
     // TIMBER
-    implementation "com.jakewharton.timber:timber:4.5.1"
+    implementation "com.jakewharton.timber:timber:4.7.1"
 
     // REACTING - RXJAVA 2
-    implementation "io.reactivex.rxjava2:rxjava:2.1.12"
-    implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
-    implementation "com.jakewharton.rxbinding2:rxbinding:2.0.0"
-    implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.0.0"
-
-    // PREFSER
-    implementation "com.github.pwittchen:prefser-rx2:2.2.1"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.6"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
 
     // ROUTING - CICERONE
-    implementation "ru.terrakok.cicerone:cicerone:4.0.2"
+    implementation "ru.terrakok.cicerone:cicerone:5.0.0"
 
     // RETROFIT 2
     implementation "com.squareup.retrofit2:retrofit:2.4.0"
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
 
     // OKHTTP 3
-    implementation "com.squareup.okhttp3:logging-interceptor:3.8.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.12.1"
 
     // GLIDE
-    implementation "com.github.bumptech.glide:glide:4.6.1"
-    annotationProcessor "com.github.bumptech.glide:compiler:4.6.1"
-    implementation("com.github.bumptech.glide:okhttp3-integration:4.6.1") {
+    implementation "com.github.bumptech.glide:glide:4.8.0"
+    annotationProcessor "com.github.bumptech.glide:compiler:4.8.0"
+    implementation("com.github.bumptech.glide:okhttp3-integration:4.8.0") {
         exclude group: 'glide-parent'
     }
 }
