rename compile to implementation in Prefser dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,5 +82,5 @@ dependencies {
     }
 
     // PREFSER
-    compile 'com.github.pwittchen:prefser-rx2:2.2.2'
+    implementation 'com.github.pwittchen:prefser-rx2:2.2.2'
 }
