--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,10 @@
 apply plugin: 'com.android.application'
 
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+
+apply plugin: 'kotlin-android-extensions'
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -29,12 +34,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.core:core-ktx:1.1.0-alpha04"
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation 'com.google.android.material:material:1.1.0-alpha03'
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
 
     // BUTTER KNIFE
     implementation "com.jakewharton:butterknife:10.0.0"
@@ -46,10 +53,10 @@ dependencies {
     implementation "com.arello-mobile:moxy-app-compat:1.5.5"
     annotationProcessor "com.arello-mobile:moxy-compiler:1.5.5"
 
-    // ORM - ROOM
-    implementation 'androidx.room:room-runtime:2.1.0-alpha04'
-    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha04'
-    implementation 'androidx.room:room-rxjava2:2.1.0-alpha04'
+    // ROOM
+    implementation 'androidx.room:room-runtime:2.1.0-alpha05'
+    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha05'
+    implementation 'androidx.room:room-rxjava2:2.1.0-alpha05'
 
     // DI - TOOTHPICK
     implementation "com.github.stephanenicolas.toothpick:toothpick-runtime:1.1.3"
