--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.core:core-ktx:1.1.0-alpha04"
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
+    implementation "androidx.core:core-ktx:1.1.0-alpha04"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
@@ -51,12 +51,11 @@ dependencies {
     implementation "com.arello-mobile:moxy:1.5.5"
     implementation "com.arello-mobile:moxy-android:1.5.5"
     implementation "com.arello-mobile:moxy-app-compat:1.5.5"
-    annotationProcessor "com.arello-mobile:moxy-compiler:1.5.5"
 
     // ROOM
-    implementation 'androidx.room:room-runtime:2.1.0-alpha05'
-    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha05'
-    implementation 'androidx.room:room-rxjava2:2.1.0-alpha05'
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+    implementation "android.arch.persistence.room:rxjava2:1.1.1"
 
     // DI - TOOTHPICK
     implementation "com.github.stephanenicolas.toothpick:toothpick-runtime:1.1.3"
