--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,12 +45,13 @@ dependencies {
 
     // BUTTER KNIFE
     implementation "com.jakewharton:butterknife:10.0.0"
-    annotationProcessor "com.jakewharton:butterknife-compiler:10.0.0"
+    kapt "com.jakewharton:butterknife-compiler:10.0.0"
 
     // MVP - MOXY
     implementation "com.arello-mobile:moxy:1.5.5"
     implementation "com.arello-mobile:moxy-android:1.5.5"
     implementation "com.arello-mobile:moxy-app-compat:1.5.5"
+    kapt "com.arello-mobile:moxy-compiler:1.5.5"
 
     // ROOM
     implementation "android.arch.persistence.room:runtime:1.1.1"
@@ -60,7 +61,7 @@ dependencies {
     // DI - TOOTHPICK
     implementation "com.github.stephanenicolas.toothpick:toothpick-runtime:1.1.3"
     implementation "com.github.stephanenicolas.toothpick:smoothie:1.1.3"
-    annotationProcessor "com.github.stephanenicolas.toothpick:toothpick-compiler:1.1.3"
+    kapt "com.github.stephanenicolas.toothpick:toothpick-compiler:1.1.3"
 
     // TIMBER
     implementation "com.jakewharton.timber:timber:4.7.1"
@@ -82,7 +83,7 @@ dependencies {
 
     // GLIDE
     implementation "com.github.bumptech.glide:glide:4.8.0"
-    annotationProcessor "com.github.bumptech.glide:compiler:4.8.0"
+    kapt "com.github.bumptech.glide:compiler:4.8.0"
     implementation("com.github.bumptech.glide:okhttp3-integration:4.8.0") {
         exclude group: 'glide-parent'
     }
