--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,11 +78,13 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.1"
 
     // GLIDE
-    implementation "com.github.bumptech.glide:glide:4.8.0"
-    kapt "com.github.bumptech.glide:compiler:4.8.0"
+    implementation "com.github.bumptech.glide:glide:4.9.0"
+    kapt "com.github.bumptech.glide:compiler:4.9.0"
     implementation("com.github.bumptech.glide:okhttp3-integration:4.8.0") {
         exclude group: 'glide-parent'
     }
+
+    implementation 'com.facebook.stetho:stetho:1.5.1'
 
     // PREFSER
     implementation 'com.github.pwittchen:prefser-rx2:2.2.2'
