--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,7 @@ dependencies {
         exclude group: 'glide-parent'
     }
 
+    // STETHO
     implementation 'com.facebook.stetho:stetho:1.5.1'
 
     // PREFSER
