--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.ParticipantStatsApiModel.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
@@ -39,8 +39,8 @@ dependencies {
     implementation "androidx.core:core-ktx:1.1.0-alpha05"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.ParticipantStatsApiModel:runner:1.1.1'
+    androidTestImplementation 'androidx.ParticipantStatsApiModel.espresso:espresso-core:3.1.1'
     implementation 'com.google.android.material:material:1.1.0-alpha04'
 
     // MVP - MOXY
