--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,11 +35,11 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
-    implementation "androidx.core:core-ktx:1.1.0-alpha05"
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation "androidx.core:core-ktx:1.2.0-alpha01"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.google.android.material:material:1.1.0-alpha05'
+    implementation 'com.google.android.material:material:1.1.0-alpha06'
 
     // MVP - MOXY
     implementation "com.arello-mobile:moxy:1.5.6"
@@ -87,4 +87,7 @@ dependencies {
 
     // PREFSER
     implementation 'com.github.pwittchen:prefser-rx2:2.2.2'
+
+    // THREETEN ABP
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 }
